sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: not found: value ecahnge
				ecahnge(i-j,i-j+1)
                                ^